terraform/alb.tf
resource "aws_lb" "app_lb" {
  name               = "${var.project_name}-alb"
  internal           = false
  load_balancer_type = "application"
  subnets            = [
    aws_subnet.subnet_a.id,
    aws_subnet.subnet_b.id,
  ]
  security_groups    = [aws_security_group.alb_sg.id]
}

resource "aws_lb_target_group" "frontend_tg" {
  name        = "${var.project_name}-frontend"
  port        = 3000
  protocol    = "HTTP"
  vpc_id      = aws_vpc.main.id
  target_type = "instance"
}

resource "aws_lb_target_group" "backend_tg" {
  name        = "${var.project_name}-backend"
  port        = 5000
  protocol    = "HTTP"
  vpc_id      = aws_vpc.main.id
  target_type = "instance"
}

# resource "aws_lb_listener" "http" {
#   load_balancer_arn = aws_lb.app_lb.arn
#   port              = 80
#   protocol          = "HTTP"
#   default_action {
#     type             = "forward"
#     target_group_arn = aws_lb_target_group.frontend_tg.arn
#   }
# }

# resource "aws_lb_listener_rule" "backend_rule" {
#   listener_arn = aws_lb_listener.http.arn
#   priority     = 10
#   action {
#     type             = "forward"
#     target_group_arn = aws_lb_target_group.backend_tg.arn
#   }
#   condition {
#     path_pattern {
#       values = ["/api/*"]
#     }
#   }
# }

# resource "aws_lb_target_group_attachment" "frontend_attach" {
#   target_group_arn = aws_lb_target_group.frontend_tg.arn
#   target_id        = aws_instance.app.id
#   port             = 3000
# }

# resource "aws_lb_target_group_attachment" "backend_attach" {
#   target_group_arn = aws_lb_target_group.backend_tg.arn
#   target_id        = aws_instance.app.id
#   port             = 5000
# }
